exports[`maxWidth option is capped by the terminal 1`] = `
┌───────────────────────────────────────────────────────┐
│foo bar foo bar foo bar foo bar foo bar foo bar foo bar│
│foo bar foo bar foo bar                                │
└───────────────────────────────────────────────────────┘
`;

exports[`maxWidth option with a character wider than the box 1`] = `
┌──┐
│字│
└──┘
`;

exports[`maxWidth option with border style (none) 1`] = `
foo bar foo bar foo
bar                
`;

exports[`maxWidth option with height 1`] = `
┌───────────────┐
│foo bar foo bar│
│foo bar        │
│               │
└───────────────┘
`;

exports[`maxWidth option with padding + margin 1`] = `

   ┌─────────────────┐
   │                 │
   │   foo bar foo   │
   │   bar foo bar   │
   │                 │
   └─────────────────┘

`;

exports[`maxWidth option with title + footer 1`] = `
┌ a title that is  ┐
│foo bar           │
└ a footer that is ┘
`;

exports[`maxWidth option with width 1`] = `
┌──────────────────┐
│foo bar           │
└──────────────────┘
`;

exports[`maxWidth option works 1`] = `
┌───────┐
│foo bar│
└───────┘
`;

exports[`maxWidth option works 2`] = `
┌───────────────┐
│foo bar foo bar│
│foo bar foo bar│
│foo bar foo bar│
└───────────────┘
`;
